# gw-iaas

./: .dockerignore  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: build-containers.yaml  ci.yaml  slideshow-container.yaml
docker/: build-project.py
libs/gravswell/: README.md
libs/gravswell/gravswell.cloudbreak/: pyproject.toml
libs/gravswell/gravswell.cloudbreak/gravswell/cloudbreak/: utils.py
libs/gravswell/gravswell.cloudbreak/gravswell/cloudbreak/base/: kubernetes.py
libs/gravswell/gravswell.cloudbreak/gravswell/cloudbreak/google/: __init__.py  kubernetes.py
libs/gravswell/gravswell.cloudbreak/gravswell/cloudbreak/kubernetes/: __init__.py  client.py
libs/gravswell/gravswell.cloudbreak/tests/unit/: test_google.py
libs/gravswell/gravswell.quiver/: pyproject.toml
libs/gravswell/gravswell.quiver/docs/_build/doctrees/: about.doctree  environment.pickle  index.doctree  modules.doctree  readme_link.doctree  welcome.doctree
libs/gravswell/gravswell.quiver/docs/_build/html/: .buildinfo  about.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  readme_link.html  search.html  searchindex.js  welcome.html
libs/gravswell/gravswell.quiver/docs/_build/html/_sources/: welcome.rst.txt
libs/gravswell/gravswell.quiver/gravswell/quiver/: __init__.py  model.py  model_config.py  model_repository.py
libs/gravswell/gravswell.quiver/gravswell/quiver/exporters/: __init__.py  ensemble.py  exporter.py  torch_onnx.py
libs/gravswell/gravswell.quiver/gravswell/quiver/io/: file_system.py  gcs.py  local.py
libs/gravswell/gravswell.quiver/tests/unit/: test_io.py  test_model.py  test_model_config.py  test_torch_onnx_exporter.py
libs/hermes/hermes.gwftools/hermes/gwftools/: gwftools.py
libs/hermes/hermes.gwftools/tests/: test_gwftools.py
libs/hermes/hermes.quiver/: pyproject.toml  tox.ini
libs/hermes/hermes.quiver/hermes/quiver/: model.py
libs/hermes/hermes.quiver/hermes/quiver/exporters/: exporter.py
libs/hermes/hermes.quiver/hermes/quiver/streaming/: streaming_output.py
libs/hermes/hermes.quiver/tests/unit/: conftest.py  test_keras_savedmodel_exporter.py  test_model.py
libs/hermes/hermes.quiver/tests/unit/exporters/: test_keras_savedmodel_exporter.py  test_torch_onnx_exporter.py
libs/hermes/hermes.quiver/tests/unit/streaming/: test_aggregator.py  test_snapshotter.py
libs/hermes/hermes.stillwater/hermes/stillwater/: client.py
libs/hermes/hermes.typeo/: README.md  pyproject.toml
libs/hermes/hermes.typeo/hermes/typeo/: actions.py  typeo.py
libs/hermes/hermes.typeo/tests/: test_config_parsing.py  test_typeo.py
projects/: README.md
projects/clients/: environment.yaml  pyproject.toml
projects/clients/clients/: deepclean.py  utils.py
projects/clients/tests/: test_frame_collector.py  test_frame_writer.py
projects/deepclean-production/: README.md  channels.txt  end-to-end.ipynb  pyproject.toml
projects/deepclean-production/dc_online_prod/: __main__.py  utils.py
projects/deepclean-production/deepcleaner/: pipeline.py  plot_utils.py  utils.py
projects/deepclean-production/tests/: test_writer.py
projects/export/: export.py  pyproject.toml
projects/gw-iaas/: README.md  channels.deepclean.txt  pyproject.toml
projects/gw-iaas/clients/: .gitignore  Dockerfile  channels.txt  ppr.pkl  pyproject.toml
projects/gw-iaas/clients/clients/: deepclean.py  utils.py
projects/gw-iaas/export/: Dockerfile  Makefile  export.py  pyproject.toml
projects/gw-iaas/offline-orchestration/: offline.py
projects/hello-world/: README.md  main.py  pyproject.toml  tritonserver.yaml
projects/hello-world/hello-world/: __main__.py  tritonserver.yaml
projects/offline/: pyproject.toml
projects/slideshow/: Dockerfile  presentation.ipynb  presentation.slides.html  pyproject.toml  rise.css  run.sh  startup-script.sh  triton.yaml  utils.py
projects/slideshow/.ipynb_checkpoints/: presentation-checkpoint.ipynb
projects/slideshow/scripts/: configure.sh  run.sh  startup-script.sh
projects/snapshotter-test/: README.md  pyproject.toml
projects/snapshotter-test/snapshotter-test/: __main__.py
projects/snapshotter-test/snapshotter_test/: __main__.py
