[tool.poetry]
name = "clients"
version = "0.1.0"
description = "Client pipelines for GW IaaS experiments"
authors = ["Alec Gunny <alec.gunny@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
"hermes.typeo" = { path = "../../libs/hermes/hermes.typeo", develop = true }

[tool.poetry.dependencies."hermes.gwftools"]
path = "../../libs/hermes/hermes.gwftools"
develop = true
extras = ["gcs"]

# add the NGC PyPI so that tritonclient
# can install correctly
[[tool.poetry.source]]
name = "ngc"
url = "https://pypi.ngc.nvidia.com"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "debug"

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"
