[tool.poetry]
name = "dc_online_prod"
version = "0.1.0"
description = "Pipeline for running DeepClean online in production"
authors = ["Alec Gunny <alec.gunny@gmail.com>"]

[tool.poetry.scripts]
deepclean = "dc_online_prod.__main__:main"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
scipy = "^1.7"

# build tables for local dependencies
# explicitly because of how long the
# paths are
[tool.poetry.dependencies."hermes.gwftools"]
path = "../../libs/hermes/hermes.gwftools"
develop = true

[tool.poetry.dependencies."hermes.typeo"]
path = "../../libs/hermes/hermes.typeo"
develop = true

# add the NGC PyPI so that tritonclient
# can install correctly
[[tool.poetry.source]]
name = "ngc"
url = "https://pypi.ngc.nvidia.com"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "debug"

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"

[typeo]
strain_data_dir = "/home/muhammed.saleem/deepClean/automated-offline/o3replay_unofficial/live/llhoft/H1"
witness_data_dir = "/home/muhammed.saleem/deepClean/automated-offline/o3replay_unofficial/live/lldetchar/H1"
write_dir = "/home/alec.gunny/frames/deepclean-cleaned/aggregated-0.5s"
kernel_length = 1
stride_length = 0.001953125
sample_rate = 4096
max_latency = 0.5
preprocess_pkl = "ppr.bin"
inference_rate = 1000
channels = "channels.txt"
sequence_id = 1001
url = "localhost:8001"
model_name = "deepclean-stream"
model_version = 1
verbose = true
log_file = "deepclean.latency-0.5.log"
