[tool.poetry]
name = "hermes-hello-world"
version = "0.1.0"
description = "Example pipeline leveraging Hermes tools"
authors = ["Alec Gunny <alec.gunny@gmail.com>"]
packages = [
    {include = "hello-world"}
]

[tool.poetry.dependencies]
python = "^3.8"
torchvision = "^0.10"

# install our local libraries in editable
# mode to develop everything in lock step
# use table entries rather than inline tables
# since the paths make the options a bit long
[tool.poetry.dependencies."hermes.cloudbreak"]
path = "../../libs/hermes/hermes.cloudbreak"
develop = true

[tool.poetry.dependencies."hermes.quiver"]
path = "../../libs/hermes/hermes.quiver"
develop = true
extras = [ "torch", "gcs" ]

# add the NGC PyPI so that tritonclient
# can install correctly
[[tool.poetry.source]]
name = "ngc"
url = "https://pypi.ngc.nvidia.com"

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"
