[tool.poetry]
name = "offline-pipeline"
version = "0.1.0"
description = "Offline pipeline for GW inference"
authors = ["Alec Gunny <alec.gunny@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

# install our local libraries in editable
# mode to develop everything in lock step
"gravswell.cloudbreak" = {path = "../../libs/gravswell/gravswell.cloudbreak", develop = true}
"gravswell.quiver" = {path = "../../libs/gravswell/gravswell.quiver", develop = true}

# add the NGC PyPI so that tritonclient
# can install correctly
[[tool.poetry.source]]
name = "ngc"
url = "https://pypi.ngc.nvidia.com"
