[tool.poetry]
name = "gravswell.cloudbreak"
version = "0.1.0"
description = "Cloud orchestration utilites"
authors = ["Alec Gunny <alec.gunny@gmail.com>"]
packages = [
    {include = "gravswell"}
]

[tool.poetry.dependencies]
python = "^3.8"
rich = "^10.7"
google-cloud-storage = "^1.38"
google-cloud-container = "^2.7"
kubernetes = "^17.17"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

# documentation dependencies
sphinx = "^4.1"
sphinx-material = "^0.0.34"
