[tool.poetry]
name = "clients"
version = "0.1.0"
description = "Client pipelines for GW IaaS experiments"
authors = ["Alec Gunny <alec.gunny@gmail.com>"]

[tool.poetry.scripts]
deepclean = "clients.deepclean:main"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
scipy = "^1.7"

# build tables for local dependencies
# explicitly because of how long the
# paths are
[tool.poetry.dependencies."hermes.gwftools"]
path = "../../../libs/hermes/hermes.gwftools"
develop = true
extras = ["gcs"]

[tool.poetry.dependencies."hermes.typeo"]
path = "../../../libs/hermes/hermes.typeo"
develop = true

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "debug"

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"
